View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030872 | Community | OCCT:Application Framework | public | 2019-08-07 14:02 | 2019-08-11 10:49 |
Reporter | drazmyslovich | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2015 | ||
Product Version | 7.4.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030872: Application Framework - Add a reader for the format only in the case of success | ||||
Description | At the current, the application adds an empty reader instance to the readers collection in case of an error, which prevents the proper error (exception) reporting during the next tries of importing the files. The application should retry to acquire the driver. | ||||
Steps To Reproduce | Delete manually Plugin file from the installation folder | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR30872 has been created by drazmyslovich. SHA-1: 748ef4e7ea2714f4e88f945ba7ba54c02ef7332e Detailed log of new commits: Author: build Date: Wed Aug 7 13:01:13 2019 +0200 0030872: In case of failure, retry to acquire the driver for the format |
|
Please, review the proposed solution |
|
Reviewed. |
|
Combination - OCCT branch : WEEK-31 master SHA - f002535d5e446d8b3c737c3c35edeb570a0269a2 5f5b1aed1c6e139bbd34314eca77ae7abcd8895c Products branch : WEEK-31 SHA - 1144fe7d76516b4f51602e5bca86c8f2a51359c7 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16240.470000000052 / 16237.229999999976 [+0.02%] Products Total CPU difference: 10484.910000000053 / 10493.010000000033 [-0.08%] Windows-64-VC14: OCCT Total CPU difference: 17566.125 / 17592.765625 [-0.15%] Products Total CPU difference: 12091.5625 / 12065.453125 [+0.22%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR30872 has been deleted by inv. SHA-1: 748ef4e7ea2714f4e88f945ba7ba54c02ef7332e |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-08-07 14:02 | drazmyslovich | New Issue | |
2019-08-07 14:02 | drazmyslovich | Assigned To | => drazmyslovich |
2019-08-07 14:03 | git | Note Added: 0086058 | |
2019-08-07 14:04 | drazmyslovich | Note Added: 0086059 | |
2019-08-07 14:04 | drazmyslovich | Assigned To | drazmyslovich => mpv |
2019-08-07 14:04 | drazmyslovich | Status | new => resolved |
2019-08-07 14:04 | drazmyslovich | Steps to Reproduce Updated | |
2019-08-07 15:22 | mpv | Assigned To | mpv => szy |
2019-08-07 19:58 | kgv | Summary | Add a reader for the format only in the case of success => Application Framework - Add a reader for the format only in the case of success |
2019-08-08 11:29 | szy | Note Added: 0086086 | |
2019-08-08 11:29 | szy | Assigned To | szy => bugmaster |
2019-08-08 11:29 | szy | Status | resolved => reviewed |
2019-08-09 11:18 | bugmaster | Note Added: 0086105 | |
2019-08-09 11:18 | bugmaster | Status | reviewed => tested |
2019-08-09 11:18 | bugmaster | Test case number | => Not required |
2019-08-11 10:40 | bugmaster | Changeset attached | => occt master a6b55fba |
2019-08-11 10:40 | bugmaster | Status | tested => verified |
2019-08-11 10:40 | bugmaster | Resolution | open => fixed |
2019-08-11 10:49 | git | Note Added: 0086138 |