0030872: In case of failure, retry to acquire the driver for the format